--- a/data/blog/system-design.mdx
+++ b/data/blog/system-design.mdx
@@ -29,6 +29,7 @@ Consider these real-world examples:
 - Reddit's initial design couldn't handle viral posts, leading to frequent outages
 
 **Your architecture choices in the first week will affect your system for years.**
+![System Architecture Foundation](/static/images/napkin.png)
 
 ## Building Your Foundation: The Three Unbreakable Rules
 
