--- a/data/blog/system-design.mdx
+++ b/data/blog/system-design.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'System Design: How Tech Giants Build Systems That Never Break'
-date: '2024-10-26'
+date: '2024-11-12'
 tags: ['System Design']
-draft: true
+draft: false
 layout: PostBanner
 images: ['/static/images/system-design.jpeg']
 summary: 'Every successful tech system shares a hidden pattern. Thousands of well-funded startups crash under load.'
@@ -10,137 +10,188 @@ summary: 'Every successful tech system shares a hidden pattern. Thousands of wel
 
 ## A Practical Guide to Building Scalable, Resilient, and Maintainable Systems
 
-Every successful tech system shares a hidden pattern. Thousands of well-funded startups crash under load.
+Every successful tech system shares a hidden pattern. Why do some platforms handle millions of users without breaking, while others crumble under pressure? Thousands of well-funded startups crash despite their technical resources.
 
 The difference isn't luck **—** it's architecture.
 
-This guide will explore the key principles for making systems scalable. We will also look at what causes some systems to fail under pressure.
+In this guide, we’ll break down the principles that make tech giants’ systems scalable, resilient, and maintainable. You’ll learn why architecture matters, the mistakes to avoid, and the key strategies that successful companies use to build systems that thrive under pressure.
 
-## The Core Truth: Architecture
-
-System design isn't about clever code **—** it's about making **simple decisions early** that prevent complex problems later. Think of it like chess **—** the first moves determine the endgame. Like grandmasters who think several moves ahead, successful system architects do the same. They anticipate growth patterns, failure modes, and scaling challenges before they arise.
+System design isn’t about clever coding tricks **—** it’s about **making simple, strategic decisions early** to prevent complex problems later. Think of it like chess: your first moves determine the endgame. Successful system architects think several steps ahead, anticipating growth, failure, and scaling challenges before they arise.
 
 ### The Cost of Early Mistakes
 
 Consider these real-world examples:
 
-- Twitter's early monolithic architecture led to the infamous "Fail Whale" era
-- Facebook's initial PHP codebase required a complete rewrite as the user count exploded
-- Reddit's initial design couldn't handle viral posts, leading to frequent outages
+- **Twitter’s Fail Whale Era:** Early monolithic architecture couldn’t handle user growth, leading to frequent crashes.
+- **Facebook’s PHP Rewrite:** The original codebase, designed for a smaller user base, had to be rewritten from scratch to scale.
+- **Reddit’s Viral Post Outages:** Reddit’s early system design struggled with unexpected surges in traffic, causing frequent downtime.
 
-**Your architecture choices in the first week will affect your system for years.**
-![System Architecture Foundation](/static/images/napkin.png)
+Your architecture choices in the first week will define your system’s future. Get it wrong, and you’ll face costly rewrites. Get it right, and you’ll scale seamlessly.
 
 ## Building Your Foundation: The Three Unbreakable Rules
 
 ### Rule 1: Know Your Numbers
 
-Before writing a single line of code, understand your system's **fundamental metrics**:
+Before writing a single line of code, understand your system’s key metrics. Metrics guide your design decisions, helping you plan for growth and avoid bottlenecks.
 
-#### 1. Traffic Metrics
+#### Traffic Metrics
 
-- **Daily Active Users (DAU):** This measures how many users engage with your system each day
-- **Requests per Second (RPS):** This shows how many requests your system handles each second
-- **Peak vs. Average Load:** Understanding the difference helps plan for busy times
-- **Growth Rate Projections:** Forecasting growth can guide future infrastructure needs
+- **Daily Active Users (DAU):** How many users engage with your system daily?
+- **Requests per Second (RPS):** How many requests does your system handle per second?
+- **Peak vs. Average Load:** Plan for spikes in traffic, not just the average.
+- **Growth Rate Projections:** Forecasting future traffic prevents last-minute scaling crises.
 
-#### 2. Data Metrics
+#### Data Metrics
 
-- **Storage Growth Rate:** This tracks the rate at which your data storage needs are increasing
-- **Read vs. Write Ratio:** This helps to understand how much data is being read compared to how much is being written
-- **Data size per user:** Knowing the average data size per user is essential for planning
-- **Retention Requirements:** This defines how long you need to keep data for users
+- **Storage Growth Rate:** How quickly is your data growing?
+- **Read vs. Write Ratio:** Are users mostly reading or writing data?
+- **Data Size per User:** Know how much storage each user requires.
+- **Retention Requirements:** How long do you need to store user data?
 
-#### 3. Performance Metrics
+#### Performance Metrics
 
-- **Response Time Requirements:** This establishes expectations for the system's response speed
-- **Availability Targets:** These are goals for how often the system should be operational
-- **Latency Budgets:** This defines acceptable delays in data processing
-- **Throughput Needs:** This outlines how much data the system needs to handle at peak times
+- **Response Time Requirements:** What’s your acceptable response speed?
+- **Availability Targets:** What percentage of uptime do you guarantee?
+- **Latency Budgets:** What’s the maximum delay allowed for processing data?
+- **Throughput Needs:** How much data must the system handle during peak times?
+
+![Metrics](/static/images/system/1.png)
+
+Understanding these metrics early ensures your architecture can scale and meet user expectations.
 
 ### Rule 2: Data Foundation Matters
 
-Your database choice can make or break your system. Consider these factors:
+Your database is the heart of your system. It dictates how data is stored, accessed, and scaled as your application grows. Choosing the wrong database can result in poor performance and expensive migrations.
 
-![Database](/static/images/database.jpeg)
+![Database](/static/images/system/2.png)
 
-#### 1. SQL Databases (e.g., PostgreSQL)
+#### SQL Databases (e.g., PostgreSQL)
 
-Use when:
+SQL databases excel when data consistency is critical. They are ideal for systems requiring complex relationships between data and transactional integrity. Examples include:
 
-- Data consistency is crucial
-- Relations are complex
-- Transactions are necessary
+- Banking platforms
+- Booking systems
+- Applications where reliability is non-negotiable
 
-Examples: Financial systems, booking platforms.
+#### NoSQL Databases (e.g., MongoDB, Cassandra)
 
-#### 2. NoSQL Databases (e.g., MongoDB, Cassandra)
+NoSQL databases shine when horizontal scaling and schema flexibility are priorities. They are designed for high write performance, making them perfect for use cases like:
 
-Use when:
+- Social media platforms
+- Logging systems
+- Applications with dynamic data structures or heavy traffic
 
-- Horizontal scaling is a priority
-- Schema flexibility is needed
-- Write performance is crucial
+The right database aligns with your use case, ensuring your system remains scalable and efficient over time.
 
-Examples: Social media feeds, logging systems.
+### Rule 3: Simplicity is Non-Negotiable
 
-### Rule 3: Simplicity
+Simplicity is the ultimate sophistication. A simple architecture is easier to scale, debug, and maintain as your system grows. Overcomplicating early on often leads to inefficiency and failure.
 
-Netflix's Path to Simplicity:
+#### Netflix’s Approach to Simplicity
 
-Netflix evolved with strategic insight. It started with DVD rentals, then grew into complex microservices, and finally settled on simpler, focused solutions.
+Netflix’s architecture evolved with growth. Starting as a monolithic system, it transitioned to microservices but maintained simplicity to ensure reliability and scalability. By simplifying its architecture, Netflix avoided unnecessary complexity, making its system robust and efficient.
 
-**Key Principles:**
+#### Key Principles for Simplicity
 
-- Each service should have one main task
-- Limit dependencies between services
-- Choose reliable technologies over trendy ones
-- Cut features that do not add value
+- Each service should focus on one primary task.
+- Minimize dependencies between services to reduce failure points.
+- Opt for proven, reliable technologies over trendy but untested options.
+- Eliminate features that don’t add significant value.
 
-## The Scaling Secret: Blocks, Not Balloons
+![Simplicity](/static/images/system/3.png)
 
-### Level 1: Smart Caching
+A simpler system not only reduces the chance of failure but also makes scaling and maintaining it far more manageable.
 
-Maintain the speed of your system by storing data in an efficient manner. Use a **memory cache** for fast access items **—** these include user sessions and frequent calculations. Store shared data in Redis for easy team access. Keep heavy items like images and files at the network edge using a CDN.
+### The Scaling Secret: Blocks, Not Balloons
 
-### Level 2: Database Growth
+Scaling isn’t about stretching your system to its limits; it’s about building in blocks. This approach ensures that as you grow, your system remains stable and efficient.
 
-When caching isn't enough, expand your database with careful consideration. First, boost your current setup with better hardware and smarter data queries. Then, spread the load across many databases. Use copies for reading and split the data across servers.
+#### Level 1: Smart Caching
 
-### Level 3: Service Structure
+Caching is your first line of defense against slow response times. By storing frequently accessed data in memory, you reduce the need to query your database repeatedly.
 
-**Ensuring the safe breaking of monoliths:**
+**Best Practices for Caching:**
 
-Breaking complex systems works best in stages. First, establish clear data ownership. Then, build independent services around these boundaries. Finally, connect them with an API gateway that uses load balancing **—** it will keep traffic flowing.
+- Use in-memory caches like **Redis** for user sessions and frequent calculations.
+- Store shared data in a distributed cache for team-wide access.
+- Cache large files like images at the network edge using a **Content Delivery Network (CDN)** for faster delivery.
 
-## The Path Forward: A Strategic Implementation Journey
+With smart caching, you can handle spikes in traffic without breaking a sweat.
 
-Every successful implementation begins with a solid foundation. This journey rests on **three critical elements**:
+#### Level 2: Database Scaling
 
-1. Understand your needs
-2. Choose the right tools
-3. Plan for growth
+When caching isn’t enough, it’s time to scale your database.
 
-We document user numbers, data volumes, and performance needs **—** this sets our baseline expectations.
+- **Step 1: Vertical Scaling**: Upgrade your existing database server with better hardware and optimize queries.
+- **Step 2: Horizontal Scaling**: Distribute your database load by:
+  - Creating replicas for reading.
+  - Sharding data across multiple servers.
 
-The technical foundation demands thoughtful consideration across **three critical dimensions**:
+By scaling horizontally, you ensure that your database can handle millions of requests without slowing down.
 
-1. Selecting the appropriate database architecture sets the stage for data management
-2. Picking a programming language that suits the team's skills and the project's needs
-3. Making framework decisions that support our architectural goals
+#### Level 3: Service Structure
 
-Our scaling strategy encompasses **three vital components**:
+As your system grows, breaking it into smaller, independent services becomes essential.
 
-- The caching approach must optimize performance while maintaining data consistency
-- Database growth planning ensures sustainable expansion of our data layer
-- Service boundary definitions create clear separations that enable independent scaling
+**Steps to Break a Monolith:**
 
-**Three simple ideas will build the best systems of tomorrow:**
+1. Define Data Ownership: Identify which part of your system owns each piece of data.
+2. Build Independent Services: Develop services around clear data boundaries.
+3. Connect via API Gateway: Use an API gateway with load balancing to manage traffic between services.
 
-- They must be easy to understand
-- They must be easy to change
-- They must grow without obstacles
+Breaking a monolith into services allows each component to scale independently, reducing the risk of bottlenecks.
 
-When you keep things simple, making changes becomes easier. And when a system is both simple and flexible, it can grow without problems **—** that's the recipe for success.
+![Transition](/static/images/system/4.png)
 
-Build with these principles. Scale with confidence. Ship without fear.
+### The Path Forward: A Strategic Implementation Journey
+
+Building scalable systems isn’t a one-time effort. It’s a journey that requires continuous improvement and iteration.
+
+#### Phase 1: Understand Your Needs
+
+Document your:
+
+- User base size and growth projections
+- Data storage and retrieval requirements
+- Performance and availability targets
+
+#### Phase 2: Choose the Right Tools
+
+Select tools and technologies that align with your goals:
+
+- **Databases:** SQL for consistency, NoSQL for flexibility.
+- **Programming Languages:** Pick ones your team excels in.
+- **Frameworks:** Ensure they support your architectural goals.
+
+#### Phase 3: Plan for Growth
+
+- Optimize your caching layer for immediate performance gains.
+- Prepare your database for horizontal scaling.
+- Define service boundaries to enable independent scaling.
+
+### The Three Pillars of Great Systems
+
+- **Ease of Understanding:** The architecture should be intuitive for developers to grasp.
+- **Ease of Change:** Systems must be flexible enough to accommodate new features.
+- **Obstacle-Free Growth:** Design systems that scale without major overhauls.
+
+![Great System](/static/images/system/5.png)
+
+By keeping these principles in mind, you can build systems that grow with your business.
+
+### Conclusion: Build, Scale, and Ship with Confidence
+
+Great system design is about preparation and simplicity. By understanding your metrics, choosing the right tools, and planning for growth, you can build systems that never break under pressure.
+
+**Now it’s your turn:**
+
+- Are you ready to simplify your architecture and plan for success?
+- What’s the one architectural decision you can make today that will save you headaches tomorrow?
+
+**Start small, think big, and design systems that thrive.**
+
+#### Thank You for Reading! 🙏
+
+If you found this valuable and want to dive deeper into web performance and optimization tips, let’s connect! 🚀
+
+👉 **Follow me on [X](https://x.com/shyamenk07)** for more insights, updates, and practical advice.
