--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -4,7 +4,7 @@ avatar: /static/images/avatar.png
 occupation: Full-Stack Developer
 company: Cyber Sapient Technologies
 email: shyamenk@gmail.com
-twitter: https://twitter.com/Twitter
+twitter: https://x.com/shyamenk07
 linkedin: https://www.linkedin.com/in/shyamenk/
 github: https://github.com/shyamenk/
 ---
