add november file

--- a/data/blog/system-design.mdx
+++ b/data/blog/system-design.mdx
@@ -169,13 +169,15 @@ Select tools and technologies that align with your goals:
 - Prepare your database for horizontal scaling.
 - Define service boundaries to enable independent scaling.
 
+![Phases](/static/images/system/5.png)
+
 ### The Three Pillars of Great Systems
 
 - **Ease of Understanding:** The architecture should be intuitive for developers to grasp.
 - **Ease of Change:** Systems must be flexible enough to accommodate new features.
 - **Obstacle-Free Growth:** Design systems that scale without major overhauls.
 
-![Great System](/static/images/system/5.png)
+![Great System](/static/images/system/6.png)
 
 By keeping these principles in mind, you can build systems that grow with your business.
 
