--- a/data/blog/database-design.mdx
+++ b/data/blog/database-design.mdx
@@ -2,7 +2,7 @@
 title: 'Optimizing Database Design: Advanced Solutions for Scalable and Efficient Systems'
 date: '2024-11-20'
 tags: ['Database']
-draft: false
+draft: true
 layout: PostBanner
 images: ['/static/images/db-design.png']
 summary: 'In today’s data-driven world, scalable and high-performance databases form the backbone of virtually every successful application.'
